syntax="proto3";

package test;

option go_package = "github.com/TheLazarusNetwork/erebrus/test;test";

message Empty{
}

service TestService {
    rpc Test(Empty) returns (Empty);
}